# python-template

./: .pre-commit-config.yaml  README.md  pyproject.toml
tests/: test_python_template.py
